--- a/src/app/view/main/Carousel.module.css
+++ b/src/app/view/main/Carousel.module.css
@@ -1,6 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 
 
+
+
+@font-face {
+  font-family: 'ABCMonumentGroteskRegular';
+  src: url('../../../public/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
+  font-weight: normal; /* or specify 'bold' if applicable */
+  font-style: normal; /* or specify 'italic' if applicable */
+}
+
+@font-face {
+  font-family: 'Light';
+  src: url('../../../public/fonts/Rhymes\ Display\ Light.woff') format('woff');
+  font-weight: normal; 
+  font-style: normal; 
+}
+
+@font-face {
+  font-family: 'Text';
+  src: url('../../../public/fonts/RhymesTextLight.woff') format('woff');
+  font-weight: normal; /* or specify 'bold' if applicable */
+  font-style: normal; 
+}
+
+
 .carouselWrapper {
   /* display: flex;
     flex-direction: column;
@@ -39,6 +63,7 @@
     border-radius: 50px;
 
   }
+  
 }
 
 
@@ -90,12 +115,13 @@
 
 .detailsTitle {
   color: #000 !important;
-  font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  font-family: 'Text', serif;
   font-weight: 500;
   margin-top: 10px;
   width: 53%;
   line-height: 1;
   margin-bottom: 10px;
+  letter-spacing: -.04em;
 
 
 }
@@ -103,7 +129,7 @@
 @media only screen and (max-width: 900px) and (min-width: 0px) {
   .detailsTitle {
     color: #000 !important;
-    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+   
     font-weight: 500;
     margin-top: 10px;
     width: 100%;
@@ -118,7 +144,7 @@
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
   .detailsTitle {
     color: #000 !important;
-    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+   
     font-weight: 500;
     margin-top: 10px;
     width: 50%;
@@ -258,9 +284,9 @@
   /* font-size: 5em; */
   color: #000 !important;
 
-  font-family: Rhymes Display;
+  font-family: Text;
 
-  font-weight: 200;
+  /* font-weight: 500; */
   letter-spacing: -.04em;
 }
 
@@ -309,7 +335,7 @@
 
 @media (min-width: 1024px) {
   .Layout2text {
-    font-size: 66px;
+    font-size: 72px;
     /* color: blue; */
 
   }
@@ -337,9 +363,10 @@
 
 .Layout2imageText {
   color: #000 ;
-  font-family: "Crimson Text", serif;
-  font-weight: 400;
-  font-style: normal;
+  /* font-family: "Crimson Text", serif; */
+  font-family: Light;
+  /* font-weight: bold; */
+  
   line-height: 1.0em;
   margin-top: 10px;
   margin-left: 4px;
