--- a/src/app/view/moretoloveDetails/moretoloveDetails.module.css
+++ b/src/app/view/moretoloveDetails/moretoloveDetails.module.css
@@ -1,6 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 
+@font-face {
+    font-family: 'ABCMonumentGroteskRegular';
+    src: url('../../../public/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
+    font-weight: normal;
+    /* or specify 'bold' if applicable */
+    font-style: normal;
+    /* or specify 'italic' if applicable */
+}
+
+@font-face {
+    font-family: 'Light';
+    src: url('../../../public/fonts/Rhymes\ Display\ Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Text';
+    src: url('../../../public/fonts/RhymesTextLight.woff') format('woff');
+    font-weight: normal;
+    /* or specify 'bold' if applicable */
+    font-style: normal;
+}
 
 /* .buttonDetailsText{
     border: 1px solid rgb(224, 223, 223);
@@ -22,7 +44,7 @@
 }
 .detailsTitle{
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 500;
     margin-top: 10px;
     margin-left: 4px;
@@ -35,7 +57,7 @@
 }
 .dateDetails{
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 500;
     margin-top: 5px;
     margin-left: 4px;
@@ -55,7 +77,7 @@
 }
 .descriptionTitle{
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 100;
     margin-top: 30px;
     margin-left: 4px;
@@ -68,7 +90,7 @@
 }
 .UnderlineText{
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 100;
     margin-top: 0px;
     margin-left: 4px;
@@ -90,7 +112,7 @@
 
 .UnderlineText2{
     color: #2f2e2e !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 100;
     margin-top: 30px;
     margin-left: 4px;
@@ -109,7 +131,7 @@
 }
 .shareText{
     color: #000 !important;
-     font-family: "Kaisei Opti", serif; 
+     font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; 
     font-weight: 100;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -158,11 +180,11 @@ font-size: 20px;
 .buttonDetailsText {
     border: 1px solid rgb(224, 223, 223);
     border-radius: 20px;
-    padding: 5px 12px;
+    padding: 5px 14px;
     /* font-size: 18px; */
     color: #000;
     text-transform: uppercase;
-    font-weight: 500;
+
 
 }
 
@@ -171,15 +193,28 @@ font-size: 20px;
     color: white;
 }
 
+
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .buttonDetailsText {
         border: 1px solid rgb(224, 223, 223);
         border-radius: 20px;
-        padding: 5px 12px;
-        font-size: 13px;
+        /* padding: 8px 14px; */
+        font-size: 15px;
         color: #000;
         text-transform: uppercase;
         font-weight: 500;
+
+    }
+    .imageDetails{
+        color: #6a7176 !important;
+        font-family: "ABCMonumentGroteskRegular", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 12px;
+        position: relative;
+        bottom: 40px;
+    
+    
     }
 }
 
@@ -187,22 +222,39 @@ font-size: 20px;
     .buttonDetailsText {
         border: 1px solid rgb(224, 223, 223);
         border-radius: 20px;
-        padding: 8px 14px;
+        /* padding: 8px 14px; */
         font-size: 10px;
         color: #000;
         text-transform: uppercase;
-        font-weight: 500;
+
+        font-family: "Crimson Text", serif;
+        font-weight: 400;
+        font-style: normal;
     }
+    .imageDetails{
+        color: #6a7176 !important;
+        font-family: "ABCMonumentGroteskRegular", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 12px;
+        /* position: relative;
+        bottom: 40px; */
+        margin-top: 10px;
+    
+    
+    }
+
 }
 
 .detailsTitle {
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: 'Text' , serif;
     font-weight: 500;
     margin-top: 10px;
     width: 53%;
     line-height: 1;
     margin-bottom: 10px;
+    letter-spacing: -.04em;
 
 
 }
@@ -210,8 +262,8 @@ font-size: 20px;
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .detailsTitle {
         color: #000 !important;
-        font-family: "Kaisei Opti", serif;
-        font-weight: 500;
+       
+        
         margin-top: 10px;
         width: 100%;
         line-height: 1;
@@ -224,12 +276,13 @@ font-size: 20px;
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .detailsTitle {
         color: #000 !important;
-        font-family: "Kaisei Opti", serif;
-        font-weight: 500;
+      
+       
         margin-top: 10px;
         width: 50%;
         line-height: 1;
         margin-bottom: 10px;
+        font-size: 60px;
 
 
     }
@@ -237,7 +290,7 @@ font-size: 20px;
 
 .shareText {
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 100;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -252,7 +305,7 @@ font-size: 20px;
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .shareText {
         color: #000 !important;
-        font-family: "Kaisei Opti", serif;
+        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
         font-weight: 100;
         margin-top: 15px;
         margin-bottom: 15px;
@@ -271,9 +324,8 @@ font-size: 20px;
 
 .dateDetails {
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
-    font-weight: 600;
-    font-size: 14px;
+    font-family: "Crimson Text", serif;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -285,9 +337,10 @@ font-size: 20px;
 
 .descriptionTitle {
     color: #000 !important;
-    font-family: "Kaisei Opti", serif;
+    font-family: Light;
     font-weight: 500;
     margin-top: 30px;
+    line-height: 1.4em;
     /* width: 100%;  */
 
 }
@@ -295,8 +348,8 @@ font-size: 20px;
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .descriptionTitle {
         color: #000 !important;
-        font-family: "Kaisei Opti", serif;
-        font-weight: 500;
+       
+      
         margin-top: 30px;
         /* width: 100%;  */
         width: 100%;
@@ -306,11 +359,12 @@ font-size: 20px;
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .descriptionTitle {
         color: #000 !important;
-        font-family: "Kaisei Opti", serif;
-        font-weight: 500;
+       
+       
         margin-top: 30px;
         /* width: 100%;  */
         width: 50%;
+        font-size: 22px;
     }
 }
 
@@ -323,7 +377,7 @@ font-size: 20px;
     text-underline-offset: 2px;
     color: #000;
     padding-bottom: 20px;
-    font-family: "Kaisei Opti", serif;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
 
 }
 
@@ -374,117 +428,3 @@ font-size: 20px;
     background-color: #000;
     color: white;
 }
-
-
-
-
-.Layout2 {
-    display: flex;
-    margin: 0px 2em;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-
-.Layout2Box {
-    margin: 0px 2em 4em 2em;
-}
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-    .Layout2Box {
-        margin: 0px 0.9em;
-    }
-    .Layout2text {
-        /* font-size: 5em; */
-        color: #000 !important;
-    
-        font-family: Rhymes Display;
-        font-size: 2em !important;
-        font-weight: 200;
-        letter-spacing: -.04em;
-    }
-    .layout2con {
-        padding: 0px 10px;
-      }
-}
-
-.layout2con {
-    /* margin: 0px 10px; */
-    padding: 0px 10px;
-  }
-  
-
-  .imageLayout2 {
-    border-radius: 20px;
-  }
-
-  .Layout2Boxbutton {
-    margin-top: 18px;
-    border: 1px solid rgb(224, 223, 223);
-    border-radius: 20px;
-    padding: 5px 15px;
-    font-size: 13px;
-    color: #000;
-    text-transform: uppercase;
-  
-  
-  }
-
-
-.Layout2imageText {
-    color: #000 !important;
-    font-family: "Kaisei Opti", serif;
-    font-weight: 500;
-    margin-top: 10px;
-    margin-left: 4px;
-  
-  }
-  
-  @media (min-width: 240px) {
-    .Layout2imageText {
-      font-size: 28px;
-      color: green;
-      /* Font size for small screens (640px and up) */
-    }
-  }
-  
-  
-  @media (min-width: 640px) {
-    .Layout2imageText {
-      font-size: 28px;
-      color: red;
-      /* Font size for small screens (640px and up) */
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .Layout2imageText {
-      font-size: 22px;
-      color: pink;
-      /* Font size for medium screens (768px and up) */
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .Layout2imageText {
-      font-size: 30px;
-      color: blue;
-  
-    }
-  }
-
-
-
-.Layout2text {
-    /* font-size: 5em; */
-    color: #000 !important;
-
-    font-family: Rhymes Display;
-    font-size: 4em;
-    font-weight: 200;
-    letter-spacing: -.04em;
-}
-
-
-
