--- a/src/app/view/moretolove/moretolove.module.css
+++ b/src/app/view/moretolove/moretolove.module.css
@@ -157,43 +157,63 @@
   
   
   
-  
-  
-  @media only screen and (max-width: 900px) and (min-width: 0px) {
-    .imageBrandName {
-      position: relative;
-      top: 7px;
-  
-  
-    }
-  
-  
+
+
+
+
+
+
+.navmenu{
+  display: inline-block;
+}
+.navmenu:hover{
+  border-bottom: 1px solid black;
+}
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .imageBrandName{
+  position: relative ;
+  top:7px ;
+
+ 
   }
-  
-  
-  .smaller-brand {
-    max-width: 150px;
-    /* Adjust the size as needed */
-  }
-  
   .shrink {
-    width: 200px;
-    /* Shrinks to 10px on scroll */
+    width: 200px; /* Shrinks to 10px on scroll */
+   
   }
-  
+}
+@media only screen and (max-width: 3900px) and (min-width: 901px) {
+  .shrink {
+    width: 200px; /* Shrinks to 10px on scroll */
+    position: relative;
+    left:-60px;
+  }
   .brandImage {
-    width: 300px;
-    /* You can adjust the width as needed */
+    width: 260px; /* You can adjust the width as needed */
     height: auto;
+    position: relative;
+    left:-60px;
   
   
   
   }
   
-  @media only screen and (max-width: 900px) and (min-width: 0px) {
-    .brandImage {
-      width: 200px; /* You can adjust the width as needed */
-      height: auto;
-    
-    } 
-  }
+  
+}
+
+
+
+.smaller-brand {
+  max-width: 150px; /* Adjust the size as needed */
+}
+
+
+
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+.brandImage {
+  width: 200px; /* You can adjust the width as needed */
+  height: auto;
+
+} 
+}
