--- a/src/app/view/bags/bags.module.css
+++ b/src/app/view/bags/bags.module.css
@@ -1,5 +1,30 @@
 /* LAYOUT 2 */
 
+
+
+@font-face {
+  font-family: 'ABCMonumentGroteskRegular';
+  src: url('../../../public/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
+  font-weight: normal; /* or specify 'bold' if applicable */
+  font-style: normal; /* or specify 'italic' if applicable */
+}
+
+@font-face {
+  font-family: 'Light';
+  src: url('../../../public/fonts/Rhymes\ Display\ Light.woff') format('woff');
+  font-weight: normal; 
+  font-style: normal; 
+}
+
+@font-face {
+  font-family: 'Text';
+  src: url('../../../public/fonts/RhymesTextLight.woff') format('woff');
+  font-weight: normal; /* or specify 'bold' if applicable */
+  font-style: normal; 
+}
+
+
+
 .Layout2 {
   display: flex;
   margin: 0px 2em;
@@ -15,6 +40,10 @@
 @media only screen and (max-width: 900px) and (min-width: 0px) {
   .Layout2Box {
     margin: 0px 0.9em;
+  }
+  .imageLayout2 {
+    height: 11em;
+    width: 100%;
   }
 }
 
@@ -44,7 +73,7 @@
   /* font-size: 5em; */
   color: #000 !important;
 
-  font-family: Rhymes Display;
+  font-family: 'Text', serif ;
 
   font-weight: 200;
   letter-spacing: -.04em;
@@ -59,6 +88,7 @@
   .Layout2 {
 
     margin: 0px 1em;
+    margin-top: 1em;
 
 
   }
@@ -70,7 +100,7 @@
 
 @media (min-width: 240px) {
   .Layout2text {
-    font-size: 28px;
+    font-size: 2.55em;
     color: green;
     /* Font size for small screens (640px and up) */
   }
@@ -115,17 +145,21 @@
 
 .Layout2imageText {
   color: #000 !important;
-  font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-  font-weight: 500;
+  font-family: Light;
+  /* font-weight: bold; */
+  
+  line-height: 1.0em;
   margin-top: 10px;
   margin-left: 4px;
-
 }
 
 @media (min-width: 240px) {
   .Layout2imageText {
-    font-size: 28px;
-    color: green;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    font-weight: 300;
+    line-height: 110%;
+    letter-spacing: -.03em;
     /* Font size for small screens (640px and up) */
   }
 }
@@ -215,3 +249,45 @@
 
 } 
 }
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .web{
+    display: none;
+  }
+  .mobile{
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+  .web{
+    display: block;
+  }
+  .mobile{
+    display: none;
+  }
+}
+
+/* Custom CSS for mobile two-column layout */
+.mobiletwocolumns {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 30px;
+  /* gap: 1rem;  */
+}
+
+/* Optional: Adjust columns for larger screens if needed */
+@media (min-width: 640px) {
+  .mobiletwocolumns {
+      grid-template-columns: repeat(4, 1fr);
+  }
+}
+
