--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -43,7 +43,7 @@
     color: #000;
     font-size: 12px;
     font-family: 'ABCMonumentGroteskRegular', sans-serif;
-    font-weight: 500;
+    font-weight: 00;
     display: inline-block;
   }
   .menu:hover{
@@ -52,8 +52,9 @@
   
   @media (min-width: 240px) {
     .textFooter {
-      font-size: 28px;
+      font-size: 1.5rem;;
       color: green;
+      letter-spacing: -.02em;
       /* Font size for small screens (640px and up) */
     }
   }
