--- a/src/app/view/main/Carousel.module.css
+++ b/src/app/view/main/Carousel.module.css
@@ -154,6 +154,13 @@
 
 
   }
+
+  .layout4 {
+    margin: 5em 3em
+  }
+  .layout42 {
+    margin: 1em 3em
+  }
 }
 
 .commonimage {
@@ -166,9 +173,7 @@
   margin-top: 6px;
 }
 
-.layout4 {
-  margin: 0px 3em
-}
+
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
   .commonimage {
@@ -203,7 +208,14 @@
   }
 
   .layout4 {
-    margin: 0px 1.3em
+    margin: 0em 2.5em;
+    margin-top: 3em;
+    margin-bottom: 1em;
+  }
+  .layout42 {
+    margin: 0em 2em;
+    margin-top: 1.4em;
+    margin-bottom: 1em;
   }
 }
 
@@ -314,7 +326,7 @@
 
 @media (min-width: 240px) {
   .Layout2text {
-    font-size: 1.55em;
+    font-size: 2.35em;
     font-weight: 300;
     letter-spacing: -.04em;
     color: green;
@@ -458,7 +470,8 @@
 
 @media (min-width: 240px) {
   .Layout3imageText {
-    font-size: 18px;
+    /* font-size: 18px; */
+    font-size: 1.25rem;
     color: green;
     /* Font size for small screens (640px and up) */
   }
