--- a/src/app/view/main/Carousel.module.css
+++ b/src/app/view/main/Carousel.module.css
@@ -186,6 +186,7 @@
     display: flex;
     overflow-x: hidden;
     width: 100%;
+    
   }
 
   .Layout3Boxbutton {
@@ -591,3 +592,18 @@
   }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+.imageresponsivce{
+  width: 20%;
+}
